--- a/src/App.css
+++ b/src/App.css
@@ -1,279 +1,25 @@
-@media only screen and (max-width: 545px) {
-    .sub-content p {
-        text-align: left !important;
-    }
-}
-
-@media only screen and (max-width: 374px) {
-    .text_h1 {
-        font-size: 70px !important;
-    }
-}
-
-@media only screen and (max-width: 321px) {
-    .text_h1 {
-        font-size: 60px !important;
-    }
-}
-
-@media only screen and (max-width: 997px) {
+@media (max-width: 997px) {
     .col_img .img {
         padding-top: 10px !important;
         margin: 0 auto !important;
     }
-}
-
-@media only screen and (max-width:819px) {
-    footer .no-h {
-        margin-top: 0px !important;
+    .mobile-none {
+        display: none !important;
     }
 }
-
-@media only screen and (max-width:1111px) {
-    .header-content .content_d {
+@media (max-width: 775px){
+    .contact-content img{
+        margin-left: 0px;
+    }
+    .contact-content {
+        padding-right: 15px !important;
         padding-left: 15px !important;
+        margin-left: 0;
     }
-    .sub-content, .trustcontent {
-        margin-top: 40px !important;
-    }
-}
-
-@media only screen and (max-width:1262px) {
-    .text_h1_b {
-        float: right;
-        font-size: 45px !important;
+    .contact-content .content_d{
+        margin-left: 0;
     }
 }
-
-@media only screen and (max-width:1080px) {
-    .formcontent ul, .formcontent .ul_title {
-        margin-left: 15px !important;
-    }
-}
-
-@media only screen and (max-width:1109px) {
-    .text_h1_b {
-        float: right;
-        font-size: 35px !important;
-        line-height: 40px !important;
-    }
-}
-
-@media only screen and (max-width:1050px) {
-    .text_h1_b {
-        float: right;
-        font-size: 25px !important;
-        line-height: 30px !important;
-    }
-}
-
-@media only screen and (max-width:900px) {
-    .text_h1_b {
-        float: right;
-        font-size: 17px !important;
-        line-height: 23px !important;
-    }
-}
-
-@media only screen and (max-width:3840px) {
-    .cover {
-        margin-top: 38rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:1689px) {
-    .cover {
-        margin-top: 40rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:1352px) {
-    .cover {
-        margin-top: 42rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:1312px) {
-    .cover {
-        margin-top: 43rem !important;
-    }
-}
-
-@media only screen and (max-width:1288px) {
-    .cover {
-        background: #eeeeef!important;
-        position: absolute;
-        top: 0;
-        height: 7rem;
-        margin-top: 43rem !important;
-        width: 30rem;
-        z-index: 2;
-    }
-}
-
-@media only screen and (max-width:1155px) {
-    .cover {
-        margin-top: 42rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:1093px) {
-    .cover {
-        margin-top: 43rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:1087px) {
-    .cover {
-        margin-top: 44rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:1019px) {
-    .cover {
-        margin-top: 47.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:819px) {
-    .begincontent .content {
-        float: left !important;
-    }
-}
-
-@media only screen and (max-width:985px) {
-    .cover {
-        margin-top: 48.5rem !important;
-    }
-}
-
-@media only screen and (max-width:969px) {
-    .cover {
-        margin-top: 47.5rem !important;
-    }
-}
-
-@media only screen and (max-width:893px) {
-    .cover {
-        margin-top: 47rem !important;
-    }
-}
-
-@media only screen and (max-width:869px) {
-    .cover {
-        margin-top: 46rem !important;
-    }
-}
-
-@media only screen and (max-width:835px) {
-    .cover {
-        margin-top: 45rem !important;
-    }
-}
-
-@media only screen and (max-width:808px) {
-    .cover {
-        margin-top: 44rem !important;
-    }
-}
-
-@media only screen and (max-width:805px) {
-    .cover {
-        margin-top: 43.5rem !important;
-    }
-}
-
-@media only screen and (max-width:762px) {
-    .cover {
-        margin-top: 38.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:615px) {
-    .cover {
-        margin-top: 37.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:545px) {
-    .cover {
-        margin-top: 39.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:525px) {
-    .cover {
-        margin-top: 37.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:520px) {
-    .cover {
-        margin-top: 40.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:435px) {
-    .cover {
-        margin-top: 40.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:425px) {
-    .cover {
-        margin-top: 42.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:415px) {
-    .cover {
-        margin-top: 42.5rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:350px) {
-    .cover {
-        margin-top: 43rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:345px) {
-    .cover {
-        margin-top: 43rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:340px) {
-    .cover {
-        margin-top: 45rem !important;
-        width: 34rem !important;
-    }
-}
-
-@media only screen and (max-width:317px) {
-    .cover {
-        margin-top: 47rem !important;
-        width: 34rem !important;
-    }
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -456,7 +202,6 @@ nav .pro-b {
 
 .content_d {
     margin: 0 auto;
-    max-width: 570px;
 }
 
 .pointer {
@@ -469,15 +214,27 @@ nav .pro-b {
     line-height: 1.2;
     letter-spacing: normal;
 }
-
+.volunteer span{
+    text-decoration: #172d49;
+    font-weight: bold;
+}
+.box h5, .box h6{
+    font-weight: 600;
+}
 .imagecontent .content_d {
-    font-size: 22px;
     font-stretch: normal;
     font-weight: 400;
     line-height: 1.27;
+    font-size: 17px;
     letter-spacing: normal;
 }
-
+.contact-content{
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.contact-content img{
+    margin-left: 40px;
+}
 .imagecontent_r {
     margin-top: 70px;
 }
@@ -501,18 +258,12 @@ nav .pro-b {
     object-fit: cover;
 }
 
-.imagecontent .i1, .imagecontent .i3 {
-    padding-right: 115px;
-}
 
 .pink {
     background-color: #E5175D;
     color: white;
 }
 
-.imagecontent .i2, .imagecontent .i4 {
-    padding-left: 115px;
-}
 
 .header-content .content_d p {
     font-size: 20px;
@@ -614,6 +365,12 @@ small {
     transition: all 0.2s ease;
     line-height: 18px;
 }
+.footer a{
+    color: #c9cdd2;
+}
+.imagecontent ul{
+    list-style: square;
+}
 .fixed{
     position: fixed;
 }
@@ -695,21 +452,36 @@ a:hover {
     transition-duration: 0.4s;
 }
 
-.card:hover {
-    box-shadow: 0 2px 10px 0 rgba(37, 44, 50, 0.1);
-    background-color: rgba(255, 255, 255, 0);
-    background-image: url('/box-header.svg');
-    background-repeat: no-repeat;
-}
-
 .card .btn {
     transition: 0.4s;
+    text-shadow: none;
 }
 
 .card:hover .btn {
     background-color: #E5175D;
 }
-
+.collapsing .card,.show .card{
+z-index: 20;
+display: block;
+position: absolute;
+-webkit-box-shadow: 10px 10px 83px -41px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 83px -41px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 83px -41px rgba(0,0,0,0.75);
+}
+.collapsing{
+    height: auto !important;
+}
+.sm-text{
+    font-size: 12px;
+    line-height: 1.5em;
+    color: gray;
+    font-weight: normal;
+    text-transform: none;
+    text-shadow: none;
+}
+.collapse .btn{
+    
+}
 .bonuses h4 {
     font-size: 22px;
     font-weight: 500;
@@ -775,75 +547,6 @@ a.pink:hover {
     color: white;
 }
 
-.begincontent .li_title {
-    font-weight: normal;
-}
-
-.begincontent .row {
-    background-image: url('/background.svg');
-    height: 570px;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-@media only screen and (min-width:1600px) {
-    .begincontent .row {
-        height: 53.5625rem;
-    }
-    .begincontent .content {
-        margin-top: 14.0625rem !important;
-        padding-right: 10.625rem !important;
-    }
-}
-
-@media only screen and (max-width:3480px) {
-    .begincontent .content {
-        margin-top: 14.0625rem !important;
-        padding-right: 34.425rem !important;
-    }
-}
-
-@media only screen and (max-width:1950px) {
-    .begincontent .content {
-        margin-top: 14.0625rem !important;
-        padding-right: 30.425rem !important;
-    }
-}
-
-@media only screen and (max-width:1930px) {
-    .begincontent .content {
-        margin-top: 14.0625rem !important;
-        padding-right: 28.025rem !important;
-    }
-}
-
-@media only screen and (max-width:1910px) {
-    .begincontent .content {
-        margin-top: 14.0625rem !important;
-        padding-right: 24.025rem !important;
-    }
-}
-
-@media only screen and (max-width:1850px) {
-    .begincontent .content {
-        margin-top: 14.0625rem !important;
-        padding-right: 20.025rem !important;
-    }
-}
-
-@media only screen and (max-width:1750px) {
-    .begincontent .content {
-        margin-top: 14.0625rem !important;
-        padding-right: 10.025rem !important;
-    }
-}
-
-@media only screen and (max-width:1594px) {
-    .begincontent .content {
-        margin-top: 8.0625rem !important;
-        padding-right: 120px !important;
-    }
-}
 .dropdown-item.active, .dropdown-item.enabled, .dropdown-item:visited, .dropdown-item:focus{
     text-decoration: none;
     background-color: beige;
@@ -871,16 +574,6 @@ a.pink:hover {
     overflow: hidden;
 }
 
-.formcontent .col-form {
-    box-shadow: -10px 0 20px 0 rgba(37, 44, 50, 0.05);
-    background-color: rgba(255, 255, 255, 0);
-}
-
-.formcontent ul {
-    padding-left: 20px;
-    list-style-type: none;
-    list-style-image: url('/icon_check.svg');
-}
 
 .ul_title {
     font-weight: 300;
